[gd_scene load_steps=2 format=3 uid="uid://derv72wuv03ov"]

[ext_resource type="Script" uid="uid://6lfuamlftkpx" path="res://addons/gnet/examples/SteamP2P/SteamLobbyMain.gd" id="1_b5rkg"]

[node name="SteamLobbyMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5rkg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 337.0
offset_bottom = 147.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Simple Steam P2P Lobby"

[node name="HBoxInputs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyIDInput" type="LineEdit" parent="VBoxContainer/HBoxInputs"]
layout_mode = 2

[node name="HBoxButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Join"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Disconnect"

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Refresh Lobbies"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersList" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbiesList" type="Label" parent="VBoxContainer"]
layout_mode = 2
